# cli-expander

./: .gitignore  .stignore  Cargo.toml  README.md  project-plan.csv  run.sh  tasks.csv
cli-expander-cli/: Cargo.toml
cli-expander-cli/src/: main.rs
cli-expander-cli/tests/: integration.rs
cli-expander-config/: Cargo.toml
cli-expander-config/src/: config.rs  csv.rs  match_file.rs
cli-expander-detect/: Cargo.toml
cli-expander-detect/src/: source.rs
cli-expander-inject/: Cargo.toml
cli-expander-inject/src/: injector.rs  lib.rs
cli-expander-match/: Cargo.toml
cli-expander-match/src/: buffer.rs  matcher.rs
cli-expander-render/: Cargo.toml
cli-expander-render/src/: extension.rs  variables.rs
cli-expander-ui/: Cargo.toml
cli-expander-ui/src/: form.rs
config/: README.md
dev/: cli-expander-dev-plan.csv  tasks.csv
dev/agents/: MEMORY.csv
dev/ai-prompt/: documentation-build-prompt.md
dev/detail-md/: 16-tmux-grand-design.md
examples/: forms-advanced.yml
integrations/opencode/: README.md  cli-expander-prompts.ts
integrations/tmux/: README.md  ce-tmux-picker.sh  cli-expander.tmux
product-docs-public/: README.md
product-docs-public/examples/: README.md
product-docs-public/guides/: getting-started.md  installation.md  shell-integration.md  troubleshooting.md  user-guide.md
product-docs-public/reference/: competitive-analysis.md  configuration.md  (+2 more)
shell/: cli-expander.bash  cli-expander.fish  cli-expander.zsh  texpand.bash  texpand.fish  texpand.zsh
texpand-cli/: Cargo.toml
texpand-inject/: Cargo.toml
texpand-render/: Cargo.toml
(+37 files in other folders)
