[package]
name = "cli-expander-match"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
regex = { workspace = true }
cli-expander-config = { path = "../cli-expander-config" }
