[package]
name = "cli-expander-ui"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
serde = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
log = { workspace = true }
cursive = "0.21"
arboard = "3"
cli-expander-config = { path = "../cli-expander-config" }
cli-expander-render = { path = "../cli-expander-render" }
